tests/NormalTests/paczka1/small_fuzzy/76986410.err
Error in line 1: 7z6 A978 27,2
Error in line 9: 7z6 S384 -1,2
Error in line 5: 7z6 S384 13,1
